syntax = "proto3";
package smplidentitychain.did;

option go_package = "github.com/SmplEcosystem/SmplIdentityChain/x/did/types";
option java_multiple_files = true;

message ResolutionOptions {
  string accept = 1;
}