syntax = "proto3";
package smplidentitychain.vc;

import "gogoproto/gogo.proto";
import "smplidentitychain/vc/params.proto";

option go_package = "github.com/SmplEcosystem/SmplIdentityChain/x/vc/types";

// GenesisState defines the vc module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
}
